feat: implement robust spread-spectrum watermarking core v3.0

--- a/lumatrace-core/src/main/resources/lumatrace.properties
+++ b/lumatrace-core/src/main/resources/lumatrace.properties
@@ -3,7 +3,7 @@
 # ============================================================================
 
 # --- Security ---
-master.key=123456789
+master.key=0xBBC65A1F9758A076
 security.warn.demo.key=true
 
 # --- Default Metadata ---
