feat: complete enterprise architecture deployable via docker-compose

--- a/lumatrace-cloud/pom.xml
+++ b/lumatrace-cloud/pom.xml
@@ -8,56 +8,50 @@
         <groupId>org.lumatrace</groupId>
         <artifactId>lumatrace</artifactId>
         <version>1.0.0</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>lumatrace-cloud</artifactId>
-    <name>LumaTrace Cloud</name>
-    <description>LumaTrace Truth &amp; Provenance API</description>
-
-    <properties>
-        <java.version>21</java.version>
-    </properties>
+    <packaging>jar</packaging>
+    <name>LumaTrace Cloud API</name>
 
     <dependencies>
-        <!-- Dependencia interna -->
-        <dependency>
-            <groupId>org.lumatrace</groupId>
-            <artifactId>lumatrace-core</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
-        <!-- DB -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <!-- Validación -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>org.lumatrace</groupId>
+            <artifactId>lumatrace-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
-        <!-- Test -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -70,15 +64,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
+                <version>${spring-boot.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
