Final documentation pass. Applied technical Javadoc to the Core module focusing on signal processing theory and cryptographic anchoring.

--- a/lumatrace-core/src/main/resources/lumatrace.properties
+++ b/lumatrace-core/src/main/resources/lumatrace.properties
@@ -1,17 +1,22 @@
 # ============================================================================
-# LumaTrace Core Configuration
+# LUMATRACE SYSTEM PARAMETERS - PRODUCTION ENVIRONMENT
 # ============================================================================
 
-# --- Security ---
-master.key=0xBBC65A1F9758A076
-security.warn.demo.key=true
+# [SECURITY]
+# Cryptographic root for seed derivation (64-bit Hex/Long)
+# Standard: Use environment variable LUMATRACE_MASTER_KEY to override
+system.security.master_key=0xBBC65A1F9758A076
+system.security.demo_key_check=true
 
-# --- Default Metadata ---
-default.user=demo-user
-default.content=demo-content
+# [METADATA_DEFAULTS]
+# Fallback identifiers for zero-metadata ingestion pipelines
+audit.metadata.default_originator=system-service
+audit.metadata.default_payload_id=unassigned-asset
 
-# --- Image Output ---
-jpeg.quality.embed=0.95
+# [SIGNAL_PROCESSING]
+# DCT Compression quality for protected asset generation (Range: 0.0 - 1.0)
+codec.jpeg.target_quality=0.95
 
-# --- Logging ---
-verbose.logging=false
+# [TELEMETRY]
+# Logging verbosity: (true: Diagnostic / false: Performance mode)
+system.telemetry.verbose=false
