--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-target/
+### LumaTrace Security ###
+.env
+*.env
+secret.properties
+lumatrace.properties
+
+### IDEs ###
+.idea/
+*.iml
+.vscode/
+.DS_Storetarget/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 .kotlin
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
 
 ### Eclipse ###
 .apt_generated
