--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
 services:
+  # Base de Datos PostgreSQL
   db:
     image: postgres:15-alpine
     container_name: lumatrace-postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: lumatrace_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     networks:
       - luma-net
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d lumatrace_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
+  # Servidor (Backend)
   backend:
     build: .
     container_name: lumatrace-server
     ports:
-      - "8082:8081"
+      - "8081:8081"
     environment:
-      - LUMATRACE_MASTER_KEY=4916120893041237898
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://lumatrace-postgres:5432/lumatrace_db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=secret
+      - LUMATRACE_MASTER_KEY=${MASTER_KEY}
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://lumatrace-postgres:5432/${DB_NAME}
+      - SPRING_DATASOURCE_USERNAME=${DB_USER}
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
       - SPRING_PROFILES_ACTIVE=prod
+      - SERVER_PORT=8081
     networks:
       - luma-net
     depends_on:
@@ -35,3 +40,6 @@ services:
 networks:
   luma-net:
     driver: bridge
+
+volumes:
+  postgres_data:
