--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,18 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <name>LumaTrace C2PA Reference Implementation</name>
+    <description>Java-native Adaptive Spatial Watermarking for C2PA Soft-Binding</description>
+    <url>https://github.com/Cyrah2R/lumatrace-cloud</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <modules>
         <module>lumatrace-core</module>
         <module>lumatrace-server</module>
@@ -17,15 +29,11 @@
     <properties>
         <java.version>21</java.version>
         <spring-boot.version>3.2.2</spring-boot.version>
-
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
-        <maven.shade.plugin.version>3.5.0</maven.shade.plugin.version>
-        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
-        <junit.jupiter.version>5.10.0</junit.jupiter.version>
-        <slf4j.version>2.0.9</slf4j.version>
+        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -37,23 +45,10 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${junit.jupiter.version}</version>
-                <scope>test</scope>
+                <version>2.0.9</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -65,23 +60,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <compilerArgs>
-                            <arg>-Xlint:unchecked</arg>
-                            <arg>-Xlint:deprecation</arg>
-                            <arg>-parameters</arg>
-                        </compilerArgs>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.6.3</version>
+                    <version>${maven.javadoc.plugin.version}</version>
                     <configuration>
-                        <source>21</source>
-                        <failOnError>false</failOnError>
+                        <release>21</release>
+                        <additionalOptions>-Xdoclint:none</additionalOptions>
                     </configuration>
                 </plugin>
             </plugins>
